fix(Spacing Tokens): Changed vertical spacing to spacing

--- a/packages/forma-36-react-components/src/components/Notification/NotificationsManager.css
+++ b/packages/forma-36-react-components/src/components/Notification/NotificationsManager.css
@@ -20,10 +20,10 @@
 
 .NotificationsManager__container > div {
   margin-top: 0;
-  margin-bottom: var(--vertical-spacing-s);
+  margin-bottom: var(--spacing-s);
 }
 
 .NotificationsManager--top .NotificationsManager__container > div {
   margin-bottom: 0;
-  margin-top: var(--vertical-spacing-s);
+  margin-top: var(--spacing-s);
 }
